Perma [Late Beta] mochitest plain dom/indexedDB/test/<test_name> indexedDB error, 'AbortError': undefined when Gecko 83 merges to Beta on 2020-10-19
Categories
(Core :: Storage: IndexedDB, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | --- | unaffected |
firefox82 | blocking | fixed |
firefox83 | blocking | verified |
People
(Reporter: apavel, Assigned: sg)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Central as Beta simulation
Failure logs:
- test_add_put.html | indexedDB error, 'AbortError': undefined:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=316364493&repo=try&lineNumber=2553
[task 2020-09-22T11:44:54.552Z] 11:44:54 INFO - TEST-START | dom/indexedDB/test/test_add_put.html
[task 2020-09-22T11:44:54.850Z] 11:44:54 INFO - TEST-INFO | started process screentopng
[task 2020-09-22T11:44:55.211Z] 11:44:55 INFO - TEST-INFO | screentopng: exit 0
[task 2020-09-22T11:44:55.212Z] 11:44:55 INFO - Buffered messages logged at 11:44:54
[task 2020-09-22T11:44:55.212Z] 11:44:55 INFO - Running 'test_add_put.js'
[task 2020-09-22T11:44:55.212Z] 11:44:55 INFO - Pushing preferences
[task 2020-09-22T11:44:55.213Z] 11:44:55 INFO - Pushing permissions
[task 2020-09-22T11:44:55.213Z] 11:44:55 INFO - Clearing old databases
[task 2020-09-22T11:44:55.214Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | Unsupported function type
[task 2020-09-22T11:44:55.214Z] 11:44:55 INFO - Running test in a worker
[task 2020-09-22T11:44:55.215Z] 11:44:55 INFO - Worker: loading ["http://mochi.test:8888/tests/dom/indexedDB/test/unit/test_add_put.js"]
[task 2020-09-22T11:44:55.215Z] 11:44:55 INFO - Worker: starting tests
[task 2020-09-22T11:44:55.215Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | Unsupported function type: undefined
[task 2020-09-22T11:44:55.216Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | success inserting existing for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.216Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | inserted correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.217Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | making call for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}: undefined
[task 2020-09-22T11:44:55.217Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | call didn't modify value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.218Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.218Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should return correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.219Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | read back should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.219Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | read back should return correct value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}:
[task 2020-09-22T11:44:55.220Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | making call for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}: undefined
[task 2020-09-22T11:44:55.220Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | call didn't modify value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}:
[task 2020-09-22T11:44:55.221Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}:
[task 2020-09-22T11:44:55.221Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should return correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}:
[task 2020-09-22T11:44:55.222Z] 11:44:55 INFO - Buffered messages finished
[task 2020-09-22T11:44:55.222Z] 11:44:55 INFO - TEST-UNEXPECTED-FAIL | dom/indexedDB/test/test_add_put.html | indexedDB error, 'AbortError': undefined
[task 2020-09-22T11:44:55.222Z] 11:44:55 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
[task 2020-09-22T11:44:55.223Z] 11:44:55 INFO - executeWorkerTestAndCleanUp/</worker.onmessage@dom/indexedDB/test/helpers.js:780:24
[task 2020-09-22T11:44:55.223Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | Async/await tests shouldn't call finishTest(): undefined
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | Worker finished
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - Cleaning up the databases
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - Running test in main thread
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | success inserting existing for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | inserted correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | making call for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | call didn't modify value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should return correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | read back should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | read back should return correct value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":true}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | making call for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | call didn't modify value for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}
[task 2020-09-22T11:44:55.224Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should succeed for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}
[task 2020-09-22T11:44:55.225Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | write should return correct key for test {"autoincrement":true,"keypath":false,"method":"put","explicit":true,"existing":false}
[task 2020-09-22T11:44:55.225Z] 11:44:55 INFO - Not taking screenshot here: see the one that was previously logged
[task 2020-09-22T11:44:55.226Z] 11:44:55 INFO - TEST-UNEXPECTED-FAIL | dom/indexedDB/test/test_add_put.html | indexedDB error, 'AbortError'
[task 2020-09-22T11:44:55.226Z] 11:44:55 INFO - SimpleTest.ok@SimpleTest/SimpleTest.js:417:16
[task 2020-09-22T11:44:55.227Z] 11:44:55 INFO - errorHandler@dom/indexedDB/test/helpers.js:198:5
[task 2020-09-22T11:44:55.227Z] 11:44:55 INFO - TEST-PASS | dom/indexedDB/test/test_add_put.html | Async/await tests shouldn't call finishTest()
[task 2020-09-22T11:44:55.228Z] 11:44:55 INFO - GECKO(2042) | MEMORY STAT | vsize 20974415MB | residentFast 441MB
[task 2020-09-22T11:44:55.228Z] 11:44:55 INFO - TEST-OK | dom/indexedDB/test/test_add_put.html | took 393ms
- test_create_locale_aware_index.html: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=316364465&repo=try&lineNumber=4746
Simon, I think this is from bug 1663924, can you take a look?
![]() |
Reporter | |
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
I think I found a misplaced #ifdef EARLY_BETA_OR_EARLIER
causing this. Will submit a patch soon.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Comment 11•5 years ago
|
||
bugherder |
Updated•5 years ago
|
![]() |
||
Comment 12•5 years ago
|
||
Verified fixed with today's simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&selectedTaskRun=P2T-TemNQva5GpkouUrUFQ.0&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=db99f92347d89de1ad07dbe3a3d30466222d3135
Updated•5 years ago
|
Comment 17•5 years ago
|
||
Seems this breaks indexeddb on 82 now that it's out of EARLY_BETA_OR_EARLIER.
Assignee | ||
Comment 18•5 years ago
|
||
(In reply to Julien Cristau [:jcristau] from comment #17)
Seems this breaks indexeddb on 82 now that it's out of EARLY_BETA_OR_EARLIER.
What does this mean? Do we need to uplift the patch? Or are you saying it doesn't fix the issue? In the latter case, have you got a link to a failure log?
Comment 19•5 years ago
|
||
Push with early-beta disabled:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-beta&resultStatus=success%2Ctestfailed%2Cbusted%2Cexception&classifiedState=unclassified&revision=71846e999adc79096a0eb3f8ac8ac280ea132d6f
I have now uplifted the patch from this bug in https://treeherder.mozilla.org/#/jobs?repo=mozilla-beta&revision=6627169b52f92878af1395046063a2e8aa4ea2e9 so we'll see how that goes.
Comment 20•5 years ago
|
||
bugherder uplift |
Updated•5 years ago
|
Description
•