Bug 1666471 - Remove misplaced ifdef EARLY_BETA_OR_EARLIER. r=dom-workers-and-storage-reviewers,janv

Differential Revision: https://phabricator.services.mozilla.com/D91013